# Waxy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README (2).md  README.md  Waxy.jucer  make-waxy.sh  meson.build  org.waxy.Waxy.json
Source/: MainComponent.cpp  MainComponent.h
Source/Components/: DesktopComponent.h  FileListBoxModel.cpp  FileListBoxModel.h  FileListComponent.cpp  GuiConstants.h  NowPlayingComponent.cpp  NowPlayingComponent.h  PlaylistBoxModel.cpp  PlaylistBoxModel.h  PlaylistComponent.cpp  PlaylistComponent.h  ProfileComponent.cpp  ProfileComponent.h  SettingsComponent.cpp  SettingsComponent.h
Source/Logic/: AudioStream.cpp  AudioStream.h  ParseJson.cpp  ParseJson.h  Song.h  UrlJob.cpp  UrlJob.h  UrlJobStream.cpp  UrlJobStream.h  UrlJobs.cpp  UrlJobs.h  UrlRequests.cpp  UrlRequests.h  WaxyState.cpp  WaxyState.h
Source/Logic/Client/: ParseJson.cpp  ParseJson.h  UrlJobStream.cpp  UrlJobs.cpp  UrlRequests.cpp  UrlRequests.h
Source/Logic/LocalDB/: LocalDB.cpp  LocalDB.h
Source/Logic/SubSonic/: ParseJson.cpp  UrlJob.h  UrlJobStream.h  UrlJobs.h
Source/Settings/: SettingsManager.h
airsonic/: compose.yml
dac_config/: PCM5102.toml
data/: meson.build  org.waxy.Waxy.desktop.in  org.waxy.Waxy.gschema.xml  org.waxy.Waxy.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  main.py  meson.build  usb_descriptors.c  waxy.gresource.xml  waxy.in  window.py  window.ui
toml-c/: CMakeLists.txt
